#12 Envio de email no momento do agendamento